# 12-Recommendations

./: .gitignore  Makefile  README.md  pyproject.toml
01_offline_sac/: README.md  buffer.py  dataset_loader.py  evaluator.py  networks.py  run_logger.py  smoke_test.py  train.py  trainer.py
01_offline_sac/notebooks/: 00_sanity_check.ipynb  cuda_working.ipynb
notebooks/: 00_cuda_check.ipynb  00_setup.ipynb  01_data_exploration.ipynb
src/estimators/: hybrid_estimator.py
src/utils/: __init__.py  common.py  config.py  data_loader.py  logger.py  seed.py
