[project]
name = "ope-research"
version = "0.1.0"
description = "Off-Policy Evaluation Research Framework"
readme = "README.md"
authors = [
    {name = "Shirsendu Dhar"}
]
requires-python = "==3.10.*"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "hydra-core",
    "omegaconf",
    "ipykernel>=7.2.0"
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu121"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"